# pyproject.toml

[project]
name = "easylangchain"
version = "0.2.3"
authors = [
    { name="zengzhiyi", email="1694609389@qq.com" }
]
description = "A simplified wrapper around LangChain for easy tool usage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
]

[project.urls]
homepage = "https://github.com/zhiyiZeng/easylangchain"

[tool.setuptools_scm]
version_scheme = "post-release"

